fix footer padding on mobile devices

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -63,3 +63,21 @@ footer {
   padding-top: 21px;
   padding-bottom: 342px;
 }
+
+// responsive footer fix
+@media (max-width: 767px) {
+  body {
+    padding-right: 0px;
+    padding-left: 0px;
+  }
+  footer, .container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .navbar {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+ 
+
